syntax = "proto3";

package core;

message Pagination {
  int32 page_number = 1;
  int32 page_size = 2;
  int32 total_items = 3;
  bool has_next_page = 4;
}
