syntax = "proto3";
package ocr;

message FilePageRenderedEventData {
  string file_key = 1;
  string page_image_key = 2;
  int32 page_number = 3;
}
